--- a/index.html
+++ b/index.html
@@ -7,34 +7,52 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="Description" content="Enter your description here" />
 	<link rel="stylesheet" href="style.css">
-	<title>REDIO BUTTON</title>
+	<title>RADIO BUTTON</title>
 </head>
 
 <body>
 	<br><br><br>
-	<h1>REDIO BUTTON</h1>
+	<h1>RADIO BUTTON</h1>
 	<br><br>
 
 	<!---- REDIO BUTTON 1 ---->
 	<div class="wrapper">
-		<label class="main__redio">One
+		<label class="main__radio">One
 			<input type="radio" checked="checked" name="radio">
 			<span class="checkmark"></span>
 		</label>
-		<label class="main__redio">Two
+		<label class="main__radio">Two
 			<input type="radio" name="radio">
 			<span class="checkmark"></span>
 		</label>
-		<label class="main__redio">Three
+		<label class="main__radio">Three
 			<input type="radio" name="radio">
 			<span class="checkmark"></span>
 		</label>
-		<label class="main__redio">Four
+		<label class="main__radio">Four
 			<input type="radio" name="radio">
 			<span class="checkmark"></span>
 		</label>
 	</div>
 	<br><br>
+	
+	<!---- REDIO BUTTON 2 ---->
+	<div class="wrapper">
+		<div class="radio__btn__item">
+			<input type="radio" id="windows" name="os" / class="radio__btn">
+			<label for="windows" class="radio__btn__title">Windows</label>
+		</div>
+
+		<div class="radio__btn__item">
+			<input type="radio" id="mac" name="os" / class="radio__btn">
+			<label for="mac" class="radio__btn__title">Macintosh</label>
+		</div>
+
+		<div class="radio__btn__item">
+			<input type="radio" id="linux" name="os" / class="radio__btn">
+			<label for="linux" class="radio__btn__title">Linux</label>
+		</div>
+	</div>
 
 </body>
 
